Allow a new book in Chronos to specify an Akasha collection to reference
